# solana-fungible-token-creator-dashboard

./: .gitignore  README.md  implementation-plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/web/: README-UPLOAD.md  SETUP.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: airdrop-confirm-modal.tsx  airdrop-execution-modal.tsx  airdrop-form.tsx  airdrop-history-table.tsx  airdrop-summary.tsx  (+13 more)
apps/web/supabase/: airdrops-schema.sql  custom-token-schema.sql  fix-boost-image.sql  fix-rls.sql  schema-simple.sql  schema.sql
programs/token_factory/: Anchor.toml  package-lock.json
programs/token_factory/programs/token_factory/: Cargo.toml
programs/token_factory/programs/token_factory/src/: lib.rs  lib_broken.rs
programs/token_factory/programs/token_factory/src/errors/: mod.rs
programs/token_factory/programs/token_factory/src/instructions/: initialize_platform.rs  initialize_token.rs  initialize_token_with_metadata.rs  manage_exemptions.rs  mod.rs  transfer_with_fee.rs  update_fee_config.rs  update_platform_config.rs
programs/token_factory/programs/token_factory/src/state/: fee_config.rs  fee_exempt_list.rs  mod.rs  platform_config.rs  token_config.rs  token_config_v2.rs
programs/token_factory/tests/: token_factory.ts
scripts/: deploy_mainnet.sh  init_platform_devnet.ts  init_platform_devnet_simple.ts  init_platform_manual.ts  package-lock.json  package.json  test-create-token.ts  test-wallet.json  tsconfig.json  upload_metadata.ts
(+51 files in other folders)
